fixed photo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,10 @@ body {
 h1 {
   font-size: 40px;
 }
+
+.img-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
